@@ -1,5 +1,9 @@
 2001-10-06  Alan Modra  <amodra@bigpond.net.au>
 
+	* elflink.h (elf_link_input_bfd): Don't zero discarded link-once
+	section sym values.  Instead replace any relocs against them with
+	relocs against STN_UNDEF, which has a zero value.
+
 	* elf32-arc.c (elf_arc_howto_table): Set partial_inplace for all
 	relocs.
 
